; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_opncls.c_bfd_openw.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_opncls.c_bfd_openw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i8*, i32 }

@write_direction = common dso_local global i32 0, align 4
@bfd_error_system_call = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_7__* @bfd_openw(i8* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_7__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_7__*, align 8
  %7 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = call %struct.TYPE_7__* (...) @_bfd_new_bfd()
  store %struct.TYPE_7__* %8, %struct.TYPE_7__** %6, align 8
  %9 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %10 = icmp eq %struct.TYPE_7__* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store %struct.TYPE_7__* null, %struct.TYPE_7__** %3, align 8
  br label %38

12:                                               ; preds = %2
  %13 = load i8*, i8** %5, align 8
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %15 = call i32* @bfd_find_target(i8* %13, %struct.TYPE_7__* %14)
  store i32* %15, i32** %7, align 8
  %16 = load i32*, i32** %7, align 8
  %17 = icmp eq i32* %16, null
  br i1 %17, label %18, label %21

18:                                               ; preds = %12
  %19 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %20 = call i32 @_bfd_delete_bfd(%struct.TYPE_7__* %19)
  store %struct.TYPE_7__* null, %struct.TYPE_7__** %3, align 8
  br label %38

21:                                               ; preds = %12
  %22 = load i8*, i8** %4, align 8
  %23 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %24 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %23, i32 0, i32 0
  store i8* %22, i8** %24, align 8
  %25 = load i32, i32* @write_direction, align 4
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %27 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %26, i32 0, i32 1
  store i32 %25, i32* %27, align 8
  %28 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %29 = call i32* @bfd_open_file(%struct.TYPE_7__* %28)
  %30 = icmp eq i32* %29, null
  br i1 %30, label %31, label %36

31:                                               ; preds = %21
  %32 = load i32, i32* @bfd_error_system_call, align 4
  %33 = call i32 @bfd_set_error(i32 %32)
  %34 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %35 = call i32 @_bfd_delete_bfd(%struct.TYPE_7__* %34)
  store %struct.TYPE_7__* null, %struct.TYPE_7__** %3, align 8
  br label %38

36:                                               ; preds = %21
  %37 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  store %struct.TYPE_7__* %37, %struct.TYPE_7__** %3, align 8
  br label %38

38:                                               ; preds = %36, %31, %18, %11
  %39 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  ret %struct.TYPE_7__* %39
}

declare dso_local %struct.TYPE_7__* @_bfd_new_bfd(...) #1

declare dso_local i32* @bfd_find_target(i8*, %struct.TYPE_7__*) #1

declare dso_local i32 @_bfd_delete_bfd(%struct.TYPE_7__*) #1

declare dso_local i32* @bfd_open_file(%struct.TYPE_7__*) #1

declare dso_local i32 @bfd_set_error(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
